adding new style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Image Search App</h1>
     <form action="">
       <input type="text" id="search-input" placeholder="Search for images" />
-      <button id="search-btn">Button</button>
+      <button id="search-btn">Search</button>
     </form>
 
     <div class="search-images">
